플레이어 그림자 효과, 회전 구현 마무리 (#44)
* 물체 회전

* UTF-8 변경

* 플레이어 미러링

미러링 에러 수정

(뒷면 렌더링이 되지 않음, 회전이 Translation 이후에 들어가서 로컬 회전이 적용되지 않음)

* 스케일 순서 오류

* DX: 알파 블렌딩 추가

* Light 추가

디버깅용 이름, Collider 추가

child 빛 getter

* Player: 그림자 효과

빛 충돌을 그림자에 전달

그림자 충돌 처리

* component: 키고 끌 수 있게

* bug: GameObject 자체 레이어 정보 불일치

* bug: 사각형 Mesh가 실제보다 작음

* 디버깅용 이름 추가

* 하위 빛 레이어에 추가 및 충돌 설정

* 프로젝트 업데이트

--- a/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj.filters
+++ b/YamYamEngine/YamYamEngine_Windows/YamYamEngine_Windows.vcxproj.filters
@@ -16,6 +16,12 @@
     <Filter Include="Turret">
       <UniqueIdentifier>{3fda4ee5-435c-4189-8148-6f63bf648f01}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameObjects\Light">
+      <UniqueIdentifier>{b3bbf6c6-633b-433c-875f-ed297b0c77d5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObjects\Lighting">
+      <UniqueIdentifier>{30198b27-d1af-4743-9f0d-71e8c4ff7bc1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="yaPlayScene.h">
@@ -48,7 +54,6 @@
     <ClInclude Include="yaTurretScript.h">
       <Filter>Scripts</Filter>
     </ClInclude>
-    <ClInclude Include="yaPortal.hpp" />
     <ClInclude Include="IJ_Button.h">
       <Filter>GameObjects</Filter>
     </ClInclude>
@@ -56,6 +61,18 @@
       <Filter>GameObjects</Filter>
     </ClInclude>
     <ClInclude Include="IJ_ButtonConnectedDoor.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="yaPlayerShadow.h">
+      <Filter>Player</Filter>
+    </ClInclude>
+    <ClInclude Include="yaLight.h">
+      <Filter>GameObjects\Light</Filter>
+    </ClInclude>
+    <ClInclude Include="yaLighting.h">
+      <Filter>GameObjects\Lighting</Filter>
+    </ClInclude>
+    <ClInclude Include="yaPortal.hpp">
       <Filter>GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
@@ -87,7 +104,6 @@
     <ClCompile Include="yaTurretScript.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="yaPortal.cpp" />
     <ClCompile Include="IJ_Button.cpp">
       <Filter>GameObjects</Filter>
     </ClCompile>
@@ -95,6 +111,18 @@
       <Filter>GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="IJ_ButtonConnectedDoor.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="yaPlayerShadow.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
+    <ClCompile Include="yaLight.cpp">
+      <Filter>GameObjects\Light</Filter>
+    </ClCompile>
+    <ClCompile Include="yaLighting.cpp">
+      <Filter>GameObjects\Lighting</Filter>
+    </ClCompile>
+    <ClCompile Include="yaPortal.cpp">
       <Filter>GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
