--- a/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
+++ b/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
@@ -277,6 +277,9 @@
     <ClInclude Include="yaShadowMesh.hpp">
       <Filter>Engine\Resource\Mesh</Filter>
     </ClInclude>
+    <ClInclude Include="yaCircleMesh.hpp">
+      <Filter>Engine\Resource\Mesh</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
