--- a/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
+++ b/YamYamEngine/YamYamEngine_SOURCE_static/YamYamEngine_SOURCE_static.vcxproj.filters
@@ -280,8 +280,8 @@
     <ClInclude Include="yaCircleMesh.hpp">
       <Filter>Engine\Resource\Mesh</Filter>
     </ClInclude>
-    <ClInclude Include="yaTile.h">
-      <Filter>Engine\Scene</Filter>
+    <ClInclude Include="yaDimLightMesh.hpp">
+      <Filter>Engine\Resource\Mesh</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
